@@ -1,5 +1,9 @@
 DATE       AUTHOR   CHANGE
 ---------- -------- -----------------------------------------------------------
+2004-12-28 allenb   Fixed bug in POSIX implementation of CondVar.  There was
+                    a bug that allowed out of range values to be passed
+                    to the posix wait methods.
+                    NEW VERSION: 0.91.1
 [1.0 Beta 1 released - 12.24.2004]=============================================
 2004-12-22 patrickh NEW VERSION: 0.91.0
 2004-12-22 patrickh Use named semaphores for all releases of Darwin 7.x.
